--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "18.15.5",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
+    "eslint-config-prettier": "8.8.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.0",
     "postcss": "8.4.21",
     "tailwindcss": "3.2.7"
   }
