--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@planetscale/database": "1.6.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "clsx": "1.2.1",
+    "drizzle-orm": "0.23.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "mysql2": "3.2.0",
     "next": "13.2.4",
+    "next-auth": "4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
+    "drizzle-kit": "0.17.1",
     "eslint-config-prettier": "8.8.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.0",
