chore: fix nextauth and planetscale issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["./app/components/*"],
+      "@context/*": ["./app/context/*"],
+      "@server/*": ["./app/server/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
