--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "clsx": "1.2.1",
+    "cuid": "3.0.0",
     "drizzle-orm": "0.23.2",
-    "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "mysql2": "3.2.0",
     "next": "13.2.4",
@@ -27,9 +27,15 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
     "autoprefixer": "10.4.14",
     "drizzle-kit": "0.17.1",
+    "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.4",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.0",
     "postcss": "8.4.21",
