--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "husky": "8.0.3",
     "lint-staged": "13.2.0",
     "postcss": "8.4.21",
+    "prettier": "2.8.7",
+    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.2.7",
     "tailwindcss": "3.2.7"
   }
 }
