--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@planetscale/database": "1.6.0",
     "@tanstack/react-query": "^4.28.0",
+    "@trpc/client": "^10.19.1",
+    "@trpc/next": "^10.19.1",
+    "@trpc/react-query": "^10.19.1",
+    "@trpc/server": "^10.19.1",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -25,8 +29,9 @@
     "next-auth": "4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.2",
     "typescript": "5.0.2",
-    "zod": "3.21.4"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.57.0",
@@ -43,7 +48,6 @@
     "postcss": "8.4.21",
     "prettier": "2.8.7",
     "prettier-plugin-organize-imports": "3.2.2",
-    "prettier-plugin-tailwindcss": "0.2.7",
     "tailwindcss": "3.2.7"
   }
 }
