--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "migrate": "drizzle-kit generate:mysql"
+    "migrate": "drizzle-kit generate:mysql",
+    "migrate:up": "drizzle-kit migrate:mysql",
+    "analyze": "ANALYZE=true next build",
+    "test": "vitest"
   },
   "dependencies": {
     "@planetscale/database": "1.6.0",
@@ -34,6 +37,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "13.3.0",
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.0",
     "autoprefixer": "10.4.14",
@@ -48,6 +52,7 @@
     "postcss": "8.4.21",
     "prettier": "2.8.7",
     "prettier-plugin-organize-imports": "3.2.2",
-    "tailwindcss": "3.2.7"
+    "tailwindcss": "3.2.7",
+    "vitest": "0.30.1"
   }
 }
