--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.0",
     "autoprefixer": "10.4.14",
+    "dotenv": "16.0.3",
     "drizzle-kit": "0.17.1",
     "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
@@ -53,6 +54,7 @@
     "prettier": "2.8.7",
     "prettier-plugin-organize-imports": "3.2.2",
     "tailwindcss": "3.2.7",
+    "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.30.1"
   }
 }
