--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,20 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./app/components/*"],
       "@context/*": ["./app/context/*"],
-      "@server/*": ["./app/server/*"],
+      "@server/*": ["./app/server/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/server/db/migration.mjs"
+  ],
   "exclude": ["node_modules"]
 }
