--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "drizzle-orm": "0.23.2",
     "eslint-config-next": "13.2.4",
     "mysql2": "3.2.0",
-    "next": "13.2.4",
+    "next": "^13.4.1",
     "next-auth": "4.20.1",
     "otpauth": "9.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "superjson": "^1.12.2",
-    "typescript": "5.0.2",
+    "typescript": "^5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
